--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+/* Global CSS */
+
+* {
+    font-family: 'Roboto', sans-serif;
+    padding: 0 0;
+    margin: 0 0;
+}
+
 h1 {
     font-size: 50px;
 }
@@ -11,11 +19,127 @@ p {
     margin: 0 2px;
 }
 
-.intro-margin {
-    padding-top: calc(10% + 56px);
-    /* margin-bottom: 15%; */
+hr {
+    background-color: white;
+}
+
+.btn-primary {
+    background-color: #242582;
+    border: none;
+    margin: 0 7px 0 7px;
+}
+
+.btn-primary:hover {
+    background-color: gold;
+    color: black;
+}
+
+.fa {
+    font-size: 40px;
+    width: 75px;
+    margin-top: 50px;
+}
+
+.icon-link {
+    color: white;
+    style: none;
+}
+
+.icon-link:hover {
+    color: gold;
+}
+
+.bold-font {
+    font-weight: 900;
+}
+
+.card {
+    border: none;
+}
+
+/* Landing Page */
+
+.intro-photo {
+    background-color: #242582;
+    padding-top: calc(10%);
     height: 100vh;
 }
+
+.intro-card {
+    background-color: white;
+    padding-top: calc(10%);
+    height: 100vh;
+}
+
+.intro-card .card {
+    width: 75%;
+    margin: 0 auto;
+    border-radius: 5%;
+}
+
+.rounded-headshot {
+    border-radius: 10%;
+    box-shadow: 7px 5px white;
+}
+
+.button-container {
+    margin-top: 130px;
+}
+
+/* Education */
+
+.row-col {
+    margin-top: 100px;
+    padding: 0 0;
+}
+
+.left-popout {
+    border-radius: 30px 0px 0px 30px;
+    height: 500px; 
+    background-color: #242582;
+}
+
+.left-padding {
+    padding-left: 50px;
+}
+
+/* Projects */
+
+.overlay-container {
+    position: relative;
+    display: inline-block;
+}
+
+.overlay-container .overlay {
+    position:absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: .5;
+    transition: opacity 500ms ease-in-out;
+}
+
+.overlay-container:hover .overlay{
+    opacity: .7;
+}
+
+.overlay span {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    color:#fff;
+}
+
+/* Skills */
+
+.inner-padding {
+    padding: 0 40px;
+}
+
+/* Other */
 
 .header-padding {
     padding-top: 100px;
