--- a/style.css
+++ b/style.css
@@ -131,6 +131,18 @@ strong {
     padding-bottom: 0px;
 }
 
+.no-bottom-padding {
+    padding-bottom: 0px;
+}
+
+.no-top-padding {
+    padding-top: 0px;
+}
+
+.no-padding {
+    padding: 0 0;
+}
+
 /* Education */
 
 .courses {
