Refactored style.css

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 /* Global CSS */
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 * {
@@ -30,6 +31,10 @@ hr {
     background-color: white;
 }
 
+strong {
+    font-weight: 500;
+}
+
 .btn-primary {
     background-color: #242582;
     border: none;
@@ -40,10 +45,6 @@ hr {
 .btn-primary:hover {
     background-color: gold;
     color: black;
-}
-
-strong {
-    font-weight: 500;
 }
 
 /* Landing Page */
@@ -64,7 +65,6 @@ strong {
 }
 
 .intro-photo {
-    /* background-color: #242582; */
     padding-top: calc(10%);
     height: 100vh;
     background: linear-gradient(45deg, #020024, #090979, #0473bf, #00d4ff);
@@ -205,9 +205,12 @@ strong {
         height: 70vh;
     }
 
-    .intro-card .card {
-        width: 350px;
+    .card {
+        width: 400px;
         margin: 0 auto;
+    }
+
+    .intro-card .card {
         border-radius: 5%;
     }
 
@@ -224,7 +227,7 @@ strong {
     }
     
     .experience-container {
-      width: 300px;
+      width: 400px;
     }
 
     .led-padding {
